syntax = "proto3";

import "common.proto";

package dcs;

message GetAirbasesRequest {
  optional Coalition coalition = 1;
}

message GetAirbasesResponse {
  repeated Airbase airbases = 1;
}

message GetMarkPanelsRequest {}

message GetMarkPanelsResponse {
	repeated MarkPanel mark_panels = 1;
}
